# ezra_takehome_mh

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
pages/: base_page.py  booking_page.py  payment_page.py
pages/member_portal/: member_base_page.py  member_join_page.py  member_sign_in_page.py
pages/member_portal/registration/: reserve_your_appointment.py  scan_confirm.py  schedule_your_scan.py  select_your_scan_page.py
pages/provider_portal/: provider_base_page.py  provider_sign_in_page.py
tests/registration/: registration_tests.py  test_registration.py
utils/: env_config.py  stripe_helpers.py  test_data.py
